appId: com.thilochan.NiteMed
---
- tapOn:
    id: "input_fullName"
- inputText: "Receiver"
- tapOn:
    id: "input_email"
- inputText: "thilochan.tech@gmail.com"
- tapOn:
    id: "input_password"
- inputText: "ReceiverPass123!"
- tapOn:
    id: "input_confirmPassword"
- inputText: "ReceiverPass123!"
- tapOn:
    id: "role_tracksMeds"
- tapOn:
    id: "btn_register"
